Changes for 1.8.7rc1

 - [ZBX-4036] fixed period slider position saving in Monitoring->Events (Eduard)
 - [ZBX-1010] fixed processing of a vfs.fs.size metric on Solaris with filesystems larger than 2TB (Sasha)
 - [ZBX-3874] always enable all trigger severity checkboxes after enabling GUI Messaging in user profile (Eduard)
 - [ZBX-3889] fixed deadlocks while processing triggers (Sasha)
 - [ZBX-4023] fixed excess spacing and fake plural in graph deletion message (Richlv)
 - [ZBX-4016] fixed web monitoring item status on insert and update (Eduard)
 - [ZBX-3443] fixed "not selected" working as "all" in Monitoring->Events (Eduard)
 - [ZBX-3979] adding searchWildcardsEnabled flag in API for searching using wildcards (Eduard)
 - [ZBX-4018] fixed server crash on unsupported aggregate items (asaveljevs,Sasha)
 - [ZBX-3908] allow empty string for formula field if multiplier is switched off (Eduard)
 - [ZBX-3961] added recalculation of nextcheck time after changed flexible intervals (rudolfs)
 - [ZBX-3978] fixed time period calculation, do not include upper bound (dimir,Sasha,KB)
 - [ZBX-4000] fixed stop propagation (network map element dragging in configuration) in IE9 (Eduard)
 - [ZBX-2467] added more command line arguments to objdump to request more debugging information about crashes (asaveljevs)
 - [ZBX-3972] added "Now" and "Done" buttons into js calendar - change action after day selection (Eduard)
 - [ZBX-3993] fixed transmitting of templated user macros between server and proxy (Sasha)
 - [ZBX-4008] updated Japanese translation; thanks to Kodai Terashima (Richlv)
 - [ZBX-4005] updated French translation; thanks to Joseph Bueno (Richlv)
 - [ZBXNEXT-869] clarify in manpages how the process for runtime signalling is found (Richlv)

Changes for 1.8.6

1.8.6rc2 was released as 1.8.6 without any changes

Changes for 1.8.6rc2

 - [ZBX-3990] fixed exiting proxy and server on cache reload using runtime control options (rudolfs)