@@ -1,5 +1,6 @@
 Changes for 1.8.7rc1
 
+ - [ZBX-4043] fixed processing of system.cpu.util on Solaris with non-sequential cpu numbers (Sasha)
  - [ZBX-4036] fixed period slider position saving in Monitoring->Events (Eduard)
  - [ZBX-1010] fixed processing of a vfs.fs.size metric on Solaris with filesystems larger than 2TB (Sasha)
  - [ZBX-3874] always enable all trigger severity checkboxes after enabling GUI Messaging in user profile (Eduard)
